//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "SEED 2.0" {
  database_type: 'PostgreSQL'
  Note: 'SEED 2.0'
}

Table admins {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  phone String
  profileImage String
  roles Role[] [not null]
  isActive Boolean [not null, default: true]
  isBlocked Boolean [not null, default: false]
  lastLoggedIn DateTime [default: `now()`]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table users {
  id String [pk]
  name String
  email String
  phone String
  profileImage String
  gender String
  status Status [default: 'ACTIVE']
  roles user_roles [not null]
  dob DateTime
  address addresses
  bankId String
  bank banks
  professional professional_profiles
  accountNumber String
  designation Designation
  groups users_on_group [not null]
  VehicleBooking vehicle_bookings [not null]
  ledPMS pms [not null]
  guidedPMS pms [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table banks {
  id String [pk]
  name String
  class String
  user users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table user_roles {
  userId String [not null]
  roleId Role [not null]
  user users [not null]

  indexes {
    (userId, roleId) [pk]
  }
}

Table addresses {
  id String [pk]
  userId String [unique, not null]
  country String
  state String
  city String
  address String
  zipCode String
  user users [not null]
}

Table professional_profiles {
  id String [pk]
  userId String [unique, not null]
  companyName String
  passportNumber String
  passportExpire DateTime
  citizenNumber String
  panNumber String
  guide_license String
  nma DateTime
  user users [not null]
}

Table hotels {
  id String [pk]
  name String
  image String
  branch hotel_branches [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table hotel_branches {
  id String [pk]
  name String
  state String
  city String
  address String
  phone String
  poc String
  pocPhone String
  pocDesignation String
  email String
  hotel hotels [not null]
  hotelId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  booking bookings [not null]
}

Table lodges {
  id String [pk]
  name String
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  branch lodge_branches [not null]
}

Table lodge_branches {
  id String [pk]
  name String
  state String
  city String
  address String
  phone String
  poc String
  pocPhone String
  pocDesignation String
  email String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  lodge lodges [not null]
  lodgeId String [not null]
  booking bookings [not null]
}

Table franchises {
  id String [pk]
  name String
  image String
  branch franchise_packages [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table franchise_packages {
  id String [pk]
  name String [unique, not null]
  duration Int [not null]
  description Json [not null]
  franchise franchises [not null]
  franchiseId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  PMS pms [not null]
}

Table groups {
  id String [pk]
  groupId String [unique, not null]
  PMS pms [not null]
  UsersOnGroup users_on_group [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  booking bookings [not null]
}

Table users_on_group {
  groupId String [not null]
  userId String [not null]
  rooms String
  extension String
  group groups [not null]
  user users [not null]

  indexes {
    (groupId, userId) [pk]
  }
}

Table pms {
  id String [pk]
  groupId String
  group groups
  leaderId String
  leader users
  guideId String
  guide users
  packageId String
  package franchise_packages
  customPackage Json
  additionalInfo Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table bookings {
  id String [pk]
  date DateTime [not null]
  status BookingStatus [not null, default: 'PENDING']
  meal String [not null]
  hotelId String
  comment String [default: '']
  hotel hotel_branches
  lodgeId String
  lodge lodge_branches
  groupId String
  group groups
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table vehicle_bookings {
  id String [pk]
  date DateTime [not null]
  status BookingStatus [not null, default: 'PENDING']
  comment String
  vehicleId String
  vehicle vehicles
  driverId String
  driver users
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table vehicles {
  id String [pk]
  model String
  image String
  number String [unique, not null]
  VehicleBooking vehicle_bookings [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum Role {
  ADMIN
  CLIENT
  GUIDE
  LEADER
  PORTER
  ASST_GUIDE
}

Enum Designation {
  ACCOUNT
  DRIVER
  MANAGER
  MD
  SUPPORT
  RECEPTIONIST
}

Enum Status {
  ACTIVE
  INACTIVE
  BLOCKED
}

Enum BookingStatus {
  PENDING
  CONFIRMED
  CANCELLED
}

Ref: users.bankId > banks.id [delete: Set Null]

Ref: user_roles.userId > users.id [delete: Cascade]

Ref: addresses.userId - users.id [delete: Cascade]

Ref: professional_profiles.userId - users.id [delete: Cascade]

Ref: hotel_branches.hotelId > hotels.id [delete: Cascade]

Ref: lodge_branches.lodgeId > lodges.id [delete: Cascade]

Ref: franchise_packages.franchiseId > franchises.id [delete: Cascade]

Ref: users_on_group.groupId > groups.id [delete: Cascade]

Ref: users_on_group.userId > users.id [delete: Cascade]

Ref: pms.groupId > groups.groupId [delete: Set Null]

Ref: pms.leaderId > users.id [delete: Set Null]

Ref: pms.guideId > users.id [delete: Set Null]

Ref: pms.packageId > franchise_packages.id [delete: Set Null]

Ref: bookings.hotelId > hotel_branches.id [delete: Set Null]

Ref: bookings.lodgeId > lodge_branches.id [delete: Set Null]

Ref: bookings.groupId > groups.groupId [delete: Set Null]

Ref: vehicle_bookings.vehicleId > vehicles.id [delete: Set Null]

Ref: vehicle_bookings.driverId > users.id [delete: Set Null]